deploy 브랜치에서 배포 관리 : feat : base_branches 에 대한 main, deploy 추가 coderabbitai 설정 파일 업데이트 https://github.com/TEAM-ROMROM/RomRom-FE/issues/158

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -11,10 +11,8 @@ reviews:
   auto_review:
     enabled: true
     drafts: false
-  path_filters:
-    - "**/*"
-  branch_filters:
-    - "main"
-    - "deploy"
+    base_branches:
+      - "main"
+      - "deploy"
 chat:
   auto_reply: true
