--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -163,16 +163,61 @@ jobs:
           mkdir -p ~/.appstoreconnect/private_keys
           echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 --decode > ~/.appstoreconnect/private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8
 
-      # Upload to TestFlight
+      # CHANGELOG에서 현재 버전의 변경사항 추출
+      - name: Extract release notes from CHANGELOG
+        id: release_notes
+        run: |
+          VERSION="${{ steps.current_version.outputs.version }}"
+          
+          if [ -f "CHANGELOG.md" ]; then
+            echo "CHANGELOG.md에서 v$VERSION 변경사항 추출 중..."
+            
+            # 현재 버전의 변경사항 추출
+            sed -n "/## \[$VERSION\]/,/## \[/p" CHANGELOG.md | sed '$d' > current_release_notes.txt
+            
+            # 첫 번째 줄(버전 헤더) 제거
+            tail -n +2 current_release_notes.txt > release_notes_clean.txt
+            
+            # 빈 줄과 구분선 제거
+            sed '/^$/d; /^---$/d' release_notes_clean.txt > final_release_notes.txt
+            
+            if [ -s final_release_notes.txt ]; then
+              echo "추출된 변경사항:"
+              cat final_release_notes.txt
+              echo "RELEASE_NOTES_FOUND=true" >> $GITHUB_ENV
+            else
+              echo "현재 버전의 변경사항을 찾을 수 없습니다."
+              echo "RELEASE_NOTES_FOUND=false" >> $GITHUB_ENV
+              echo "v$VERSION 업데이트" > final_release_notes.txt
+            fi
+          else
+            echo "CHANGELOG.md 파일이 없습니다."
+            echo "RELEASE_NOTES_FOUND=false" >> $GITHUB_ENV
+            echo "v$VERSION 업데이트" > final_release_notes.txt
+          fi
+
+      # Upload to TestFlight with release notes
       - name: Upload to TestFlight
         run: |
           IPA_PATH=$(echo ios/build/ipa/*.ipa)   # 첫 번째 ipa 파일 경로
           echo "Uploading $IPA_PATH"
+          
+          # Release notes 준비
+          if [ "${{ env.RELEASE_NOTES_FOUND }}" == "true" ]; then
+            RELEASE_NOTES=$(cat final_release_notes.txt)
+            echo "Release Notes 포함하여 업로드:"
+            echo "$RELEASE_NOTES"
+          else
+            RELEASE_NOTES="v${{ steps.current_version.outputs.version }} 업데이트"
+            echo "기본 Release Notes로 업로드: $RELEASE_NOTES"
+          fi
+          
           xcrun altool --upload-app \
           --type ios \
           --file "$IPA_PATH" \
           --apiKey ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
-          --apiIssuer ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
+          --apiIssuer ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }} \
+          --notes "$RELEASE_NOTES"
 
       # 성공 알림
       - name: Notify TestFlight Upload Success
