--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -196,8 +196,14 @@ jobs:
             echo "v$VERSION 업데이트" > final_release_notes.txt
           fi
 
-      # Upload to TestFlight with release notes
-      - name: Upload to TestFlight
+      # Install and setup Fastlane
+      - name: Install Fastlane
+        run: |
+          gem install fastlane
+          fastlane --version
+
+      # Upload to TestFlight with release notes using Fastlane
+      - name: Upload to TestFlight with Fastlane
         run: |
           IPA_PATH=$(echo ios/build/ipa/*.ipa)   # 첫 번째 ipa 파일 경로
           echo "Uploading $IPA_PATH"
@@ -212,12 +218,14 @@ jobs:
             echo "기본 Release Notes로 업로드: $RELEASE_NOTES"
           fi
           
-          xcrun altool --upload-app \
-          --type ios \
-          --file "$IPA_PATH" \
-          --apiKey ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
-          --apiIssuer ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }} \
-          --notes "$RELEASE_NOTES"
+          # Fastlane을 사용한 TestFlight 업로드
+          fastlane pilot upload \
+            --ipa "$IPA_PATH" \
+            --api_key_path ~/.appstoreconnect/private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8 \
+            --api_key_id "${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}" \
+            --api_issuer_id "${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}" \
+            --changelog "$RELEASE_NOTES" \
+            --skip_waiting_for_build_processing
 
       # 성공 알림
       - name: Notify TestFlight Upload Success
