--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -188,23 +188,19 @@ jobs:
                   if release['version'] == version:
                       found = True
                       
-                      # 동적 카테고리 처리
-                      category_titles = {
-                          'features': '새 기능',
-                          'bugfixes': '버그 수정', 
-                          'improvements': '개선사항',
-                          'deployment': '빌드/배포',
-                          'documentation': '문서/설정',
-                          'ui_changes': 'UI/UX',
-                          'performance': '성능',
-                          'security': '보안'
-                      }
-                      
+                      # AI가 생성한 모든 카테고리를 동적으로 처리
                       for category_key, items in release['parsed_changes'].items():
                           if items:
-                              title = category_titles.get(category_key, category_key.title())
+                              # 새 형식인지 기존 형식인지 확인
+                              if isinstance(items, dict) and 'title' in items and 'items' in items:
+                                  title = items['title']
+                                  actual_items = items['items']
+                              else:
+                                  title = category_key.replace('_', ' ').title()
+                                  actual_items = items
+                              
                               print(f"**{title}**")
-                              for item in items:
+                              for item in actual_items:
                                   if item.strip():
                                       print(f"• {item}")
                               print()
@@ -280,8 +276,16 @@ jobs:
       # Upload to TestFlight with Fastlane
       - name: Upload to TestFlight with Fastlane
         run: |
-          IPA_PATH=$(echo ios/build/ipa/*.ipa)
-          echo "Uploading $IPA_PATH"
+          # 절대 경로로 IPA 파일 찾기
+          IPA_PATH=$(find $GITHUB_WORKSPACE/ios/build/ipa -name "*.ipa" | head -1)
+          echo "Found IPA at: $IPA_PATH"
+          
+          if [ ! -f "$IPA_PATH" ]; then
+            echo "❌ IPA 파일을 찾을 수 없습니다!"
+            echo "빌드 디렉토리 내용:"
+            ls -la ios/build/ipa/
+            exit 1
+          fi
           
           # Release notes 준비
           if [ "${{ env.RELEASE_NOTES_FOUND }}" == "true" ]; then
@@ -299,6 +303,11 @@ jobs:
           export API_KEY_PATH="$HOME/.appstoreconnect/private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8"
           export IPA_PATH="$IPA_PATH"
           export RELEASE_NOTES="$RELEASE_NOTES"
+          
+          # 디버깅 정보
+          echo "Working directory: $(pwd)"
+          echo "IPA_PATH: $IPA_PATH"
+          echo "API_KEY_PATH: $API_KEY_PATH"
           
           # Fastlane 실행
           cd ios
