자동 버전관리 및 CHANGLOGmd 업데이트 기능 추가 필요 : fix :html 파싱 로직 유연하게 업데이트 및 디버깅 로그 추가 https://github.com/TEAM-ROMROM/RomRom-FE/issues/170

--- a/.github/workflows/ROMROM-CHANGELOG-UPDATE.yaml
+++ b/.github/workflows/ROMROM-CHANGELOG-UPDATE.yaml
@@ -39,11 +39,11 @@ jobs:
           PR_NUMBER="${{ github.event.pull_request.number }}"
           VERSION="${{ steps.get_version.outputs.version }}"
           TODAY=$(date '+%Y-%m-%d')
-          MAX_ATTEMPTS=120  # 5분 = 120 * 5초
+          MAX_ATTEMPTS=120  # 10분 = 120 * 5초
           ATTEMPT=0
           
           echo "🔍 PR #$PR_NUMBER에서 CodeRabbit Summary 업데이트 감지 시작..."
-          echo "최대 대기 시간: 5분 (5초마다 체크)"
+          echo "최대 대기 시간: 10분 (5초마다 체크)"
           
           while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
             ATTEMPT=$((ATTEMPT + 1))
@@ -86,13 +86,22 @@ jobs:
           
           echo "📝 CodeRabbit Summary 동적 파싱 시작..."
           
-          # Summary 섹션 추출
+          # Summary 섹션 추출 (더 넓은 범위로)
           sed -n '/<h2[^>]*>Summary by CodeRabbit<\/h2>/,/<\/div>/p' pr_content.html > summary_section.html
+          
+          # Summary가 제대로 추출되었는지 확인
+          echo "📄 추출된 Summary 섹션 크기: $(wc -c < summary_section.html) bytes"
+          if [ $(wc -c < summary_section.html) -lt 100 ]; then
+            echo "⚠️ Summary 섹션이 너무 작습니다. 전체 PR 내용에서 다시 추출 시도..."
+            grep -A 50 "Summary by CodeRabbit" pr_content.html > summary_section.html
+          fi
           
           # Raw summary 저장 (백업용)
           cat summary_section.html | sed 's/<[^>]*>//g' | sed 's/&nbsp;/ /g; s/&amp;/\&/g; s/&lt;/</g; s/&gt;/>/g; s/&quot;/"/g' > raw_summary.txt
           
           echo "🔍 동적 카테고리 추출 중..."
+          echo "📄 Summary 섹션 미리보기:"
+          head -10 summary_section.html
           
           # Python으로 동적 파싱
           cat > parse_changelog.py << 'EOF'
@@ -105,12 +114,24 @@ jobs:
           
           def extract_items_from_section(html_content, section_title):
               """특정 섹션의 아이템들을 추출"""
-              # 섹션 제목 패턴 (유연하게)
-              section_pattern = f'<p[^>]*><strong[^>]*>{re.escape(section_title)}[^<]*</strong></p>'
+              print(f"📋 '{section_title}' 섹션에서 아이템 추출 중...")
               
-              # 해당 섹션 찾기
-              section_match = re.search(section_pattern, html_content, re.IGNORECASE)
+              # 다양한 패턴으로 섹션 찾기
+              patterns = [
+                  f'<strong[^>]*>{re.escape(section_title)}[^<]*</strong>',  # 직접 strong 태그
+                  f'<li[^>]*><strong[^>]*>{re.escape(section_title)}[^<]*</strong>',  # li > strong
+                  f'<p[^>]*><strong[^>]*>{re.escape(section_title)}[^<]*</strong></p>'  # p > strong
+              ]
+              
+              section_match = None
+              for pattern in patterns:
+                  section_match = re.search(pattern, html_content, re.IGNORECASE)
+                  if section_match:
+                      print(f"✅ 패턴 매치: {pattern[:50]}...")
+                      break
+              
               if not section_match:
+                  print(f"❌ '{section_title}' 섹션을 찾을 수 없습니다")
                   return []
               
               # 섹션 이후의 ul 태그 찾기
@@ -118,6 +139,7 @@ jobs:
               ul_match = re.search(r'<ul[^>]*>(.*?)</ul>', after_section, re.DOTALL)
               
               if not ul_match:
+                  print(f"❌ '{section_title}' 섹션 이후 ul 태그를 찾을 수 없습니다")
                   return []
               
               # li 태그들에서 텍스트 추출
@@ -131,18 +153,25 @@ jobs:
                   clean_text = html.unescape(clean_text).strip()
                   if clean_text:
                       items.append(clean_text)
+                      print(f"  📝 아이템: {clean_text[:50]}...")
               
+              print(f"✅ '{section_title}' 섹션에서 {len(items)}개 아이템 추출 완료")
               return items
           
           def detect_categories(html_content):
               """HTML에서 동적으로 카테고리 감지 - AI가 생성하는 모든 카테고리 수용"""
+              print("🔍 HTML에서 카테고리 감지 시작...")
+              print(f"📄 HTML 내용 길이: {len(html_content)} characters")
+              
               detected_categories = {}
               
               # strong 태그 안의 카테고리 제목들 찾기
               strong_texts = re.findall(r'<strong[^>]*>([^<]+)</strong>', html_content, re.IGNORECASE)
+              print(f"🎯 발견된 strong 태그들: {strong_texts}")
               
               for strong_text in strong_texts:
                   clean_text = strong_text.strip()
+                  print(f"🏷️ 처리 중인 카테고리: '{clean_text}'")
                   
                   # AI가 생성한 카테고리 제목을 그대로 사용
                   items = extract_items_from_section(html_content, clean_text)
@@ -152,11 +181,15 @@ jobs:
                       if not safe_key:  # 안전한 키가 생성되지 않으면 fallback
                           safe_key = f"category_{len(detected_categories)}"
                       
+                      print(f"✅ 카테고리 추가: '{clean_text}' -> '{safe_key}' ({len(items)}개 아이템)")
                       detected_categories[safe_key] = {
                           'title': clean_text,
                           'items': items
                       }
+                  else:
+                      print(f"❌ '{clean_text}' 카테고리에서 아이템을 찾을 수 없음")
               
+              print(f"🎯 최종 감지된 카테고리 수: {len(detected_categories)}")
               return detected_categories
           
           def main():
@@ -171,12 +204,19 @@ jobs:
                   with open('summary_section.html', 'r', encoding='utf-8') as f:
                       html_content = f.read()
                   
+                  print(f"📄 읽어온 HTML 내용 미리보기:")
+                  print("=" * 50)
+                  print(html_content[:500] + "..." if len(html_content) > 500 else html_content)
+                  print("=" * 50)
+                  
                   # 동적 카테고리 감지
                   categories = detect_categories(html_content)
                   
                   print("🎯 감지된 카테고리들:")
                   for key, value in categories.items():
                       print(f"  - {key}: {value['title']} ({len(value['items'])}개 항목)")
+                      for item in value['items'][:3]:  # 첫 3개 아이템만 미리보기
+                          print(f"    • {item[:80]}...")
                   
                   # Raw summary 읽기
                   with open('raw_summary.txt', 'r', encoding='utf-8') as f:
@@ -194,6 +234,7 @@ jobs:
                   # 동적 카테고리를 parsed_changes에 추가
                   for key, value in categories.items():
                       new_release["parsed_changes"][key] = value["items"]
+                      print(f"📝 parsed_changes에 추가: {key} -> {len(value['items'])}개 아이템")
                   
                   # CHANGELOG.json 업데이트
                   try:
