자동 버전관리 및 CHANGLOGmd 업데이트 기능 추가 필요 : fix : 커밋 메시지 일관성 있게 수정 #167 이슈와 연결 https://github.com/TEAM-ROMROM/RomRom-FE/issues/170

--- a/.github/workflows/ROMROM-CHANGELOG-UPDATE.yaml
+++ b/.github/workflows/ROMROM-CHANGELOG-UPDATE.yaml
@@ -340,7 +340,7 @@ jobs:
           if git diff --staged --quiet; then
             echo "📝 변경사항이 없습니다"
           else
-            git commit -m "docs: v${{ steps.get_version.outputs.version }} 릴리즈 문서 업데이트 (PR #${{ github.event.pull_request.number }})"
+            git commit -m "ROMROM-FE 버전 관리 : docs : v${{ steps.get_version.outputs.version }} 릴리즈 문서 업데이트 (PR #${{ github.event.pull_request.number }}) : https://github.com/TEAM-ROMROM/RomRom-FE/issues/167"
             git push origin main
             echo "✅ 변경사항이 성공적으로 커밋되었습니다"
           fi
