자동 버전관리 및 CHANGLOGmd 업데이트 기능 추가 필요 : fix : 그룹 배포 로직 삭제 (원인을 모르지만 test 그룹으로 현재 배포가 진행중, 해당 부분 작동하는 이유 모르겠습니다. 일단 alom 그룹 멤버들을 test group으로 이관하여 진행) https://github.com/TEAM-ROMROM/RomRom-FE/issues/170

--- a/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
+++ b/.github/workflows/ROMROM-IOS-TESTFLIGHT.yaml
@@ -274,36 +274,7 @@ jobs:
                 uses_non_exempt_encryption: false  # 암호화 규정 자동 설정
               )
               
-              # alom 그룹에 배포 시도
-              puts "🔄 alom 그룹에 배포 시도 중..."
-              begin
-                pilot(
-                  api_key: api_key,
-                  app_identifier: "com.alom.romrom",
-                  distribute_only: true,
-                  groups: ["alom"],
-                  notify_external_testers: false
-                )
-                puts "✅ alom 그룹 배포 성공!"
-              rescue => e
-                puts "⚠️ alom 그룹 배포 실패: #{e.message}"
-                
-                # test 그룹으로 대안 시도 (test가 작동하는 것 같으니)
-                puts "🔄 test 그룹으로 대안 시도 중..."
-                begin
-                  pilot(
-                    api_key: api_key,
-                    app_identifier: "com.alom.romrom", 
-                    distribute_only: true,
-                    groups: ["test"],
-                    notify_external_testers: false
-                  )
-                  puts "✅ test 그룹 배포 성공! (alom 그룹은 수동으로 추가해주세요)"
-                rescue => e2
-                  puts "⚠️ test 그룹도 실패: #{e2.message}"
-                  puts "App Store Connect에서 수동으로 배포해주세요."
-                end
-              end
+              puts "✅ TESTFLIGHT 자동 업로드 완료!"
             end
           end
           EOF
